<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

     <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtHappy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="1"
                android:text="@string/moods_survey_happy"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtHappyCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/moods_survey_happyCounter"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/skHappy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtMotivated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/moods_survey_motivated"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtMotivatedCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/moods_survey_motivatedCounter"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/skMotivated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtStressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="3"
                android:text="@string/moods_survey_stressed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtStressedCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/moods_survey_stressedCounter"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/skStressed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtAngry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="4"
                android:text="@string/moods_survey_angry"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtAngryCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/moods_survey_angryCounter"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/skAngry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtTired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="5"
                android:text="@string/moods_survey_tired"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtTiredCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/moods_survey_tiredCounter"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/skTired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtDepressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="6"
                android:text="@string/moods_survey_depressed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtDepressedCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/moods_survey_depressedCounter"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/skDepressed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" >

        <Button
            android:id="@+id/cmdReset"
            style="@style/CustomButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="9dp"
            android:text="@string/moods_survey_reset"
            android:textSize="26sp" />

        <Button
            android:id="@+id/cmdSubmit"
            style="@style/CustomButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cmdReset"
            android:layout_alignBottom="@+id/cmdReset"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="12dp"
            android:text="@string/moods_survey_submit"
            android:textSize="26sp" />

    </RelativeLayout>

 

</RelativeLayout>